--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,12 @@
                 <artifactId>activation</artifactId>
                 <version>${javax.activation.version}</version>
             </dependency>
-            <!-- TODO 4.1: přidejte závislost na knihovně pro práci s CSV s verzí definovanou <properties> -->
+            <!-- 4.1: přidejte závislost na knihovně pro práci s CSV s verzí definovanou <properties> -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-csv</artifactId>
+                <version>1.6</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
