--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,23 @@
         <apache.commons.csv.version>1.6</apache.commons.csv.version>
         <javax.activation.version>1.1.1</javax.activation.version>
         <sun.xml.bind.jaxb>2.2.7</sun.xml.bind.jaxb>
+        <tests>unit,integration,fast,slow</tests>
 	</properties>
+
+    <profiles>
+        <profile>
+            <id>integration</id>
+            <properties>
+                <tests>integration,slow</tests>
+            </properties>
+        </profile>
+        <profile>
+            <id>unit</id>
+            <properties>
+                <tests>unit,fast</tests>
+            </properties>
+        </profile>
+    </profiles>
 
     <modules>
         <module>app</module>
