:white_check_mark: Added parametrized tests for Person and Flight related services.

--- a/services/src/test/resources/application-integrationtest.properties
+++ b/services/src/test/resources/application-integrationtest.properties
@@ -1,8 +1,7 @@
 spring.datasource.initialization-mode=always
 spring.datasource.url=jdbc:h2:file:~/H2_flightlog_test;MODE=PostgreSQL;
-#spring.datasource.data=classpath:data2.sql
-    
-spring.datasource.data=classpath:data.sql
+
+spring.datasource.data=classpath:csv/data.sql
 
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
