--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,11 @@
                 <artifactId>commons-csv</artifactId>
                 <version>1.6</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-java</artifactId>
+                <version>3.4.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
