:green_heart: Added selenium poc tests and gitlab CI configuration.

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -14,9 +14,7 @@
         <serenity.maven.version>2.2.8</serenity.maven.version>
     </properties>
 
-
     <packaging>jar</packaging>
-
     <artifactId>app</artifactId>
 
     <dependencies>
@@ -38,6 +36,14 @@
             <version>${serenity.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-spring -->
+        <dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-spring</artifactId>
+            <version>${serenity.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-screenplay-webdriver</artifactId>
@@ -134,6 +140,9 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
+                <configuration>
+                    <groups>${tests}</groups>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>net.serenity-bdd.maven.plugins</groupId>
@@ -142,7 +151,7 @@
                 <executions>
                     <execution>
                         <id>serenity-reports</id>
-                        <phase>post-integration-test</phase>
+                        <phase>test</phase>
                         <goals>
                             <goal>aggregate</goal>
                         </goals>
