--- a/pom.xml
+++ b/pom.xml
@@ -25,20 +25,26 @@
         <apache.commons.csv.version>1.6</apache.commons.csv.version>
         <javax.activation.version>1.1.1</javax.activation.version>
         <sun.xml.bind.jaxb>2.2.7</sun.xml.bind.jaxb>
-        <tests>unit,integration,fast,slow</tests>
+        <tests>unit,integration,e2e</tests>
 	</properties>
 
     <profiles>
         <profile>
             <id>integration</id>
             <properties>
-                <tests>integration,slow</tests>
+                <tests>integration</tests>
+            </properties>
+        </profile>
+        <profile>
+            <id>e2e</id>
+            <properties>
+                <tests>e2e</tests>
             </properties>
         </profile>
         <profile>
             <id>unit</id>
             <properties>
-                <tests>unit,fast</tests>
+                <tests>unit</tests>
             </properties>
         </profile>
     </profiles>
