--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: markhobson/maven-chrome:jdk-11
 stages:
   - Build
   - Test
+  - E2E
 
 cache:
   paths:
@@ -42,5 +43,15 @@ integration tests:
   when: on_success
   script:
     - mvn -P integration test
+
+end to end tests:
+  allow_failure: false
+    stage: E2E
+    only:
+      - master
+      - zks
+    when: on_success
+    script:
+      - mvn -P e2e test -Dheadless=true
 
 
