--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -59,6 +59,17 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <groups>${tests}</groups>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
