--- a/services/pom.xml
+++ b/services/pom.xml
@@ -104,5 +104,16 @@
             </exclusions>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <groups>${tests}</groups>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
