:green_heart: Changed mvn phase to verify for e2e tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,6 @@ end to end tests:
     - zks
   when: on_success
   script:
-    - mvn -P e2e test -Dheadless=true
+    - mvn verify -Dheadless=true
 
 
