:green_heart: Fixed wrong encoding for tests

--- a/external-system-connector/pom.xml
+++ b/external-system-connector/pom.xml
@@ -68,6 +68,7 @@
                 <version>2.22.0</version>
                 <configuration>
                     <groups>${tests}</groups>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
                 </configuration>
             </plugin>
         </plugins>
