--- a/app/pom.xml
+++ b/app/pom.xml
@@ -146,6 +146,7 @@
                     <includes>
                         <include>**/selenium/**/*Test.java</include>
                     </includes>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -153,6 +154,7 @@
                 <version>2.22.0</version>
                 <configuration>
                     <groups>${tests}</groups>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
                 </configuration>
             </plugin>
             <plugin>
