--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -66,6 +66,7 @@
                 <version>2.22.0</version>
                 <configuration>
                     <groups>${tests}</groups>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
                 </configuration>
             </plugin>
         </plugins>
